--- a/hr_system/static/html/departmentitem.html
+++ b/hr_system/static/html/departmentitem.html
@@ -7,16 +7,14 @@
     <script type="text/javascript" src="/static/scripts/jquery.js"></script>
     <script type="text/javascript" src="/static/scripts/admin_ivan.js"></script>
 </head>
-
+<style>
+    td {
+        border: solid 2px lightgrey;
+    }
+</style>
 <body> 
     <h1>Department Item resource</h1>
-    <h2>Link relations associated with the resource</h2>
-    <ul>
-        <li>hrsys:department - To go to the department list</li>
-        <li>hrsys:delete-department - To delete a department</li>
-        <li>edit - To edit a department</li>
-
-    </ul>
+    
 
     <h2>Response</h2>
     <code>
