--- a/hr_system/static/html/rolecollection.html
+++ b/hr_system/static/html/rolecollection.html
@@ -4,16 +4,13 @@
     <title>Role Collection resource</title>
   </head>
   <style>
-    table, th, td {
-      border:1px black;
+    td {
+        border: solid 2px lightgrey;
     }
   </style>
   <body>
     <h1>Role Collection resource</h1>
-    <h2>Link relations associated with the resource</h2>
-    <ul>
-        <li>hrsys:add-role - To add a role </li>
-    </ul>
+
 
     <h2>Response</h2>
     <code>
