--- a/hr_system/static/html/organizationitem.html
+++ b/hr_system/static/html/organizationitem.html
@@ -7,27 +7,21 @@
     <script type="text/javascript" src="/static/scripts/jquery.js"></script>
     <script type="text/javascript" src="/static/scripts/admin_ivan.js"></script>
 </head>
-
+<style>
+    td {
+        border: solid 2px lightgrey;
+    }
+</style>
 <body> 
-    <h1>Department Collection resource</h1>
-    <h2>Link relations associated with the resource</h2>
-    <ul>
-        <li>hrsys:add-department - To add department</li>
-
-    </ul>
+    <h1>Organization Item resource</h1>
 
     <h2>Response</h2>
     <code>
-        [{
-            "description": "Department number 1",
-            "name": "Dept 1",
-            "department_id": "D01"
-        }, 
         {
-            "description": "Department number 2",
-            "name": "Dept 2",
-            "department_id": "D02"
-        }]
+            "location": "oulu",
+            "name": "Org11",
+            "organization_id": "O01"
+        }
     </code>
 
     <h2>Resource properties</h2>
@@ -41,21 +35,21 @@
         </tr>
         <tr>
             <td>name</td>
-            <td>unique name of department</td>
+            <td>unique name of organization</td>
             <td>string</td>
             <td>Yes</td>
 
         </tr>
         <tr>
-            <td>description</td>
-            <td>description of the department</td>
+            <td>location</td>
+            <td>location of the organization</td>
             <td>string</td>
-            <td>No</td>
+            <td>Yes</td>
 
         </tr>
         <tr>
-            <td>department_id</td>
-            <td>Department's unique id</td>
+            <td>organization_id</td>
+            <td>Organization's unique id</td>
             <td>string</td>
             <td>Yes</td>
 
